--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -9,6 +9,12 @@ html {
   font-size: calc(10 / 1920 * 100vw);
   background-color: black;
   color: white;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+*:focus {
+  outline: none;
 }
 
 a, a:visited {
@@ -35,6 +41,7 @@ h1 {
 }
 
 .next-button {
+  cursor: pointer;
   padding: 1.8rem 3.1rem;
   border: 1px solid white;
   font-size: 2.5rem;
@@ -45,6 +52,32 @@ h1 {
   bottom: 2.2rem;
   left: 50%;
   transform: translate(-50%, 0);
+  color: white;
+  background: transparent;
+  border-radius: 0.5rem;
+  z-index: 100;
+}
+
+.path-buttons {
+  display: none;
+  position: fixed;
+  bottom: 2.2rem;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.path-button + .path-button {
+  margin-left: 2rem;
+}
+
+.path-button {
+  cursor: pointer;
+  padding: 1.8rem 3.1rem;
+  border: 1px solid white;
+  font-size: 2.5rem;
+  line-height: 1;
+  letter-spacing: 0.07em;
+  text-transform: uppercase;
   color: white;
   background: transparent;
   border-radius: 0.5rem;
@@ -62,7 +95,7 @@ h1 {
   text-transform: uppercase;
   background-color: #5C63FF ;
   color: black;
-  padding: 0.2rem 1.2rem 0.3rem;
+  padding: 0.4rem 1.4rem 0.5rem;
   border-radius: 0.5rem;
   transition: opacity 0.2s ease;
   display: flex;
@@ -80,6 +113,88 @@ h1 {
   color: #5c63ff;
 }
 
-.label.visible {
+.label.visible,
+.explosion-box.visible {
   opacity: 1
+}
+
+.explosion-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  user-select: none;
+  transition: opacity 0.2s ease;
+}
+
+.explosion {
+  position: absolute;
+  width: 17rem;
+  height: 17rem;
+  border-radius: 9999px;
+  background-color: #5C63FF;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(0.001, 0.001);
+  transition: transform 1s ease, opacity 1s ease;
+}
+
+.explosion-box.active .explosion {
+  transform: translate(-50%, -50%) scale(1, 1);
+  opacity: 0;
+}
+
+.nav-button {
+  cursor: pointer;
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  color: white;
+  font-size: 3rem;
+  font-weight: 300;
+  line-height: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: transparent;
+  border-radius: 0;
+  border: 0;
+  transition: opacity 0.2s ease;
+}
+.nav-button::before {
+  display: block;
+  content: '';
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  position: absolute;
+  width: 3.3rem;
+  height: 1.3rem;
+  bottom: calc(100% + 1rem);
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.right-nav-button {
+  right: 4rem;
+}
+.right-nav-button::before {
+  background-image: url(/assets/svg/arrow-right.svg);
+}
+
+.left-nav-button {
+  left: 4rem;
+}
+.left-nav-button::before {
+  background-image: url(/assets/svg/arrow-left.svg);
+}
+
+.nav-button-subtext {
+  opacity: 0.5;
+  margin-top: 1rem;
+}
+
+.hidden {
+  opacity: 0;
+  pointer-events: none;
 }
