--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -76,6 +76,7 @@ a, a:visited {
   color: white;
   background-color: #5C63FF;
   border: 0;
+  transition: opacity 0.3s ease;
 }
 
 .path-buttons {
