--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -264,3 +264,36 @@ a, a:visited {
   margin-right: 1.5rem;
 }
 
+.canvas-box {
+  position: relative;
+}
+
+.canvas-overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.canvas-overlay-black {
+  background-color: black;
+}
+
+.canvas-overlay-black-hidden {
+  opacity: 0;
+  transition: opacity 0.8s ease;
+  pointer-events:none;
+}
+
+.canvas-overlay-white {
+  background-color: white;
+  opacity: 1;
+  transition: opacity 0.3s ease 0.3s;
+}
+
+.canvas-overlay-white-hidden {
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.6s ease;
+}
