--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -309,3 +309,34 @@ a, a:visited {
   pointer-events: none;
   transition: opacity 0.6s ease;
 }
+
+nav {
+  position: fixed;
+  top: 10.3rem;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 3rem;
+  line-height: 1;
+  display: none;
+}
+
+nav > ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+
+nav > ul > li > button {
+  border: 0;
+  background: none;
+  display: flex;
+  align-items: center;
+  padding: 0;
+  cursor: pointer;
+  opacity: 0.3;
+}
+
+nav > ul > li > button.active {
+  opacity: 1;
+  pointer-events: none;
+}
