--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -35,6 +35,7 @@ a, a:visited {
   left: 50%;
   top: 0;
   transform: translate(-50%, 0);
+  transition: opacity 0.2s ease;
 }
 
 .intro-heading {
@@ -72,7 +73,7 @@ a, a:visited {
   background: transparent;
 }
 
-.place-order-button {
+.action-button {
   background: black;
   color: white;
   border: 0;
@@ -306,6 +307,7 @@ nav {
   font-size: 3rem;
   line-height: 1;
   display: none;
+  transition: opacity 0.2s ease;
 }
 
 nav > ul {
