--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -67,7 +67,8 @@ a, a:visited {
   transform: translate(-50%, 0);
 }
 
-.next-button {
+.next-button,
+.restart-button {
   border: 1px solid white;
   color: white;
   background: transparent;
@@ -87,7 +88,7 @@ a, a:visited {
 }
 
 .path-buttons {
-  display: none;
+  display: flex;
   position: fixed;
   bottom: 2.2rem;
   left: 50%;
@@ -151,6 +152,7 @@ a, a:visited {
   top: 50%;
   left: 50%;
   user-select: none;
+  pointer-events:none;
 }
 
 .explosion {
@@ -160,7 +162,7 @@ a, a:visited {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%) scale(0.001, 0.001);
-  transition: transform 1s ease-out, opacity 1s ease-out;
+  pointer-events:none;
 }
 
 .explosion-1 {
@@ -180,6 +182,7 @@ a, a:visited {
 
 .explosion-box.active .explosion {
   transform: translate(-50%, -50%) scale(1, 1);
+  transition: transform 1s ease-out, opacity 1s ease-out;
   opacity: 0;
 }
 
@@ -306,7 +309,6 @@ nav {
   transform: translateX(-50%);
   font-size: 3rem;
   line-height: 1;
-  display: none;
   transition: opacity 0.2s ease;
 }
 
@@ -316,7 +318,7 @@ nav > ul {
   align-items: center;
 }
 
-nav > ul > li > button {
+.nav-menu-button {
   border: 0;
   background: none;
   display: flex;
@@ -326,7 +328,7 @@ nav > ul > li > button {
   opacity: 0.3;
 }
 
-nav > ul > li > button.active {
+.nav-menu-button.active {
   opacity: 1;
   pointer-events: none;
 }
@@ -360,4 +362,146 @@ nav > ul > li > button.active {
   position: fixed;
   left: 2rem;
   bottom: 2.2rem;
+}
+
+.restart {
+  transition: opacity 0.2s ease;
+  position: absolute;
+  left: 0;
+  top: 45%;
+  width: 100vw;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.restart-img {
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.restart-img-1 {
+  width: 38.9rem;
+  height: 21.9rem;
+  background-image: url(../images/restart-img-1.png);
+}
+
+.restart-img-2 {
+  margin-left: 9.1rem;
+  width: 37.9rem;
+  height: 21.3rem;
+  background-image: url(../images/restart-img-2.png);
+}
+
+.restart-img-3 {
+  margin-left: 8.5rem;
+  width: 39rem;
+  height: 21.9rem;
+  background-image: url(../images/restart-img-3.png);
+}
+
+
+.restart-images {
+  display: flex;
+}
+
+.restart-line-box {
+  padding: 1.4rem 0;
+  width: 100%;
+  position: relative;
+}
+
+.restart-line {
+  height: 1px;
+  background-color: rgba(196, 196, 196, 0.5)
+}
+
+.restart-particle {
+  position: absolute;
+  top: 50%;
+  left: -10%;
+  transform: translate(-50%, -50%);
+  border-radius: 9999px;
+
+  background: white;
+  box-shadow: 0px 0px 10px 3px rgba(171, 162, 248, 0.5);
+}
+
+@keyframes particle-slide {
+  from {
+    left: -10%;
+  }
+  to {
+    left: 110%;
+  }
+}
+
+.restart-particle-big {
+  width: 1rem;
+  height: 1rem;
+}
+
+.restart-particle-small {
+  width: 0.5rem;
+  height: 0.5rem;
+  top: calc(50% - 0.5px);
+}
+
+
+.restart-particle-small-1 {
+  animation: 10s linear 0s infinite normal particle-slide;
+}
+
+.restart-particle-small-2 {
+  animation: 10s linear 1.24s infinite normal particle-slide;
+}
+
+.restart-particle-big-1 {
+  animation: 10s linear 1.5s infinite normal particle-slide;
+}
+
+.restart-particle-big-2 {
+  animation: 10s linear 3.98s infinite normal particle-slide;
+}
+
+.restart-particle-small-3 {
+  animation: 10s linear 5.79s infinite normal particle-slide;
+}
+
+.restart-particle-small-4 {
+  animation: 10s linear 5.87s infinite normal particle-slide;
+}
+
+.restart-particle-big-3 {
+  animation: 10s linear 6.47s infinite normal particle-slide;
+}
+
+.restart-particle-small-5 {
+  animation: 10s linear 7.40s infinite normal particle-slide;
+}
+
+
+.restart-captions {
+  display: flex;
+  color: white;
+  font-size: 2.5rem;
+  line-height: 1;
+  letter-spacing: 0.1em;
+  width: 100%;
+  text-transform: uppercase;
+  margin-top: 2.7rem;
+}
+
+.restart-caption-1 {
+  margin-left: 30.9rem;
+}
+
+.restart-caption-2 {
+  margin-left: 30rem;
+}
+
+.restart-caption-3 {
+  margin-left: 28rem;
 }
