--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -458,14 +458,6 @@ nav > ul {
   animation: 10s linear 1.24s infinite normal particle-slide;
 }
 
-.restart-particle-big-1 {
-  animation: 10s linear 1.5s infinite normal particle-slide;
-}
-
-.restart-particle-big-2 {
-  animation: 10s linear 3.98s infinite normal particle-slide;
-}
-
 .restart-particle-small-3 {
   animation: 10s linear 5.79s infinite normal particle-slide;
 }
@@ -474,14 +466,21 @@ nav > ul {
   animation: 10s linear 5.87s infinite normal particle-slide;
 }
 
-.restart-particle-big-3 {
-  animation: 10s linear 6.47s infinite normal particle-slide;
-}
-
 .restart-particle-small-5 {
   animation: 10s linear 7.40s infinite normal particle-slide;
 }
 
+.restart-particle-big-1 {
+  left: 25%;
+}
+
+.restart-particle-big-2 {
+  left: 50%;
+}
+
+.restart-particle-big-3 {
+  left: 75%;
+}
 
 .restart-captions {
   display: flex;
