--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -67,7 +67,28 @@ a, a:visited {
   transform: translate(-50%, 0);
 }
 
-.next-button,
+.today-button {
+  position: fixed;
+  background-color: transparent;
+  border: 0;
+  border-radius: 0;
+  color: white;
+  left: 4.2rem;
+  bottom: 3.3rem;
+  font-size: 3rem;
+  line-height: 1;
+  text-transform: uppercase;
+  font-weight: 300;
+  opacity: 0;
+  transition: opacity 0.2s ease;
+  cursor: pointer;
+}
+
+.today-button:not(.hidden) {
+  opacity: 0.5;
+}
+
+.tomorrow-button,
 .restart-button {
   border: 1px solid white;
   color: white;
