--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -28,6 +28,7 @@ a, a:visited {
   width: 17.4rem;
   height: 8.5rem;
   transition: color 0.3s ease;
+  z-index: 10;
 }
 
 .heading {
@@ -36,6 +37,7 @@ a, a:visited {
   top: 0;
   transform: translate(-50%, 0);
   transition: opacity 0.2s ease;
+  z-index: 10;
 }
 
 .intro-heading {
@@ -276,6 +278,7 @@ a, a:visited {
   background: transparent;
   border: 0;
   cursor: pointer;
+  z-index: 10;
 }
 
 .client-logo {
@@ -289,6 +292,7 @@ a, a:visited {
   background-position: center;
   height: 13rem;
   width: 13rem;
+  z-index: 10;
 }
 
 .upload-logo-input {
@@ -330,7 +334,9 @@ nav {
   font-size: 3rem;
   line-height: 1;
   transition: opacity 0.2s ease;
+  z-index: 10;
 }
+
 
 nav > ul {
   list-style: none;
@@ -366,6 +372,7 @@ nav > ul {
 }
 
 .globe-button {
+  z-index: 10;
   transition: opacity 0.2s ease;
   width: 6.8rem;
   height: 6.8rem;
@@ -533,4 +540,23 @@ nav > ul {
   color: rgba(250, 250,250, 0.6);
   font-size: 2rem;
   letter-spacing: 0.07em;
+}
+
+.grad-top {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 20rem;
+  background: linear-gradient(180deg, #E8E8E8 0%, #E8E8E7 51.56%, rgba(232, 232, 232, 0) 100%);
+  transition: opacity 0.2s ease;
+}
+.grad-bottom {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  height: 20rem;
+  background: linear-gradient(to top, #E8E8E8 0%, #E8E8E7 51.56%, rgba(232, 232, 232, 0) 100%);
+  transition: opacity 0.2s ease;
 }
